--- a/.env
+++ b/.env
@@ -39,5 +39,5 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/aqua?serverVersion=5.7.31"
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
